--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "2",
