--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "dependencies": {
     "@getbrevo/brevo": "^1.0.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.1",
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
     "morgan": "~1.9.1",
     "node-fetch": "2",
-    "uid2": "^1.0.0"
+    "uid2": "^1.0.0",
+    "uniqid": "^5.4.0"
   }
 }
